GNOME Bugzilla – Bug 684880
keyboard repeat does not work for screen brightness and keyboard backlight control keys
Last modified: 2012-12-20 20:48:40 UTC
Keyboard repeat is enabled and works fine with volume keys. However, it does not for LCD brightness or keyboard backlight. Using repeat on these keys is quite handy, so I believe it should be enabled. As a workaround, it should be possible to disable handling of these keys by gnome-shell, so that 3rd-party tools where repeat works (such as pommed) might handle them. Hardware: Apple MacBook Pro 5,3 Kernel 3.5.4 Xorg evdev driver, model macbook78, layout fr
Those keys are handled by gnome-settings-dameon's media-keys plugin. Reassigning.
Created attachment 226022 [details] [review] gsd: add keyboard repeat to brightness keys
The patch above works for me. It was diff'ed against gsd 3.4.2 but it is trivial and should apply to future versions without a problmem.
Created attachment 228969 [details] [review] Updated patch against git master Would be great to see this incorporated to make all these media keys work the same - at the moment the inconsistencies are quite annoying - perhaps this would qualify as an Every Details Matters bug??
@g-s-d maintainers - can anyone comment on this patch?
After conversing with cosimoc on #gnome-design it seems that the repeated keys is the expected behaviour for the screen and keyboard backlight keys as well so I guess a. there is a bug in g-s-d since it currently doesn't work that way and b. this patch (for both myself and @Romain who originally reported this issue) fixes the bug - so would be great to hear from @hadess or similar regarding this - thanks.
Would it be too much to ask to backport it to 3.6? this is one of my big annoyances in fedora 18 (mainly because I cannot find a way to make it remember brightness settings after reboot and I have to hit the dim key plenty of times to turn off the keyboard backlight at each login... macbook pro 7,1, not sure if there's a bug for that, couldn't find it, will open one soon)
(In reply to comment #7) > Would it be too much to ask to backport it to 3.6? this is one of my big > annoyances in fedora 18 (mainly because I cannot find a way to make it remember > brightness settings after reboot and I have to hit the dim key plenty of times > to turn off the keyboard backlight at each login... macbook pro 7,1, not sure > if there's a bug for that, couldn't find it, will open one soon) Filing bugs for the causes would be nicer than relying on work-arounds, certainly.
It's in gnome-3-6 now.
(In reply to comment #8) > Filing bugs for the causes would be nicer than relying on work-arounds, > certainly. I know, I know ;) I'm sorry! I was looking for a bug in g-s-d, now I found one in g-p-m and commented there, not sure it belongs there though https://bugzilla.gnome.org/show_bug.cgi?id=688706 (In reply to comment #9) > It's in gnome-3-6 now. Thank you!
(In reply to comment #10) > (In reply to comment #8) > > Filing bugs for the causes would be nicer than relying on work-arounds, > > certainly. > > I know, I know ;) I'm sorry! I was looking for a bug in g-s-d, now I found one > in g-p-m and commented there, not sure it belongs there though > https://bugzilla.gnome.org/show_bug.cgi?id=688706 gnome-power-manager contains no code of interest (and unless you upgraded, it's likely it's not even installed).
(In reply to comment #11) > (In reply to comment #10) > > (In reply to comment #8) > > > Filing bugs for the causes would be nicer than relying on work-arounds, > > > certainly. > > > > I know, I know ;) I'm sorry! I was looking for a bug in g-s-d, now I found one > > in g-p-m and commented there, not sure it belongs there though > > https://bugzilla.gnome.org/show_bug.cgi?id=688706 > > gnome-power-manager contains no code of interest (and unless you upgraded, it's > likely it's not even installed). Good to know, thanks. I had it installed from fedora 17, removed now.