media-keys: Repeat screen and keyboard brightness keys

This makes these media keys work the same way as the volume keys do.

https://bugzilla.gnome.org/show_bug.cgi?id=684880